CloudNative/202614-grupo5-proyecto/k8s/aws/credit_cards_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-cards-app-deployment
  namespace: default
  labels:
    app: credit-cards-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credit-cards-app
  template:
    metadata:
      labels:
        app: credit-cards-app
    spec:
      containers:
        - name: credit-cards-app
          image: ${ECR_REGISTRY}/credit_cards_app:v1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 30006
          readinessProbe:
            httpGet:
              path: /credit-cards/ping
              port: 30006
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /credit-cards/ping
              port: 30006
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: credit-cards-app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: credit-cards-app
  ports:
    - port: 80
      targetPort: 30006
