CloudNative/202614-grupo5-proyecto/k8s/aws/k8s-true-native-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: true-native-deployment
  namespace: default
  labels:
    app: true-native
spec:
  replicas: 1
  selector:
    matchLabels:
      app: true-native
  template:
    metadata:
      labels:
        app: true-native
    spec:
      containers:
        - name: true-native
          image: ghcr.io/misw-4301-desarrollo-apps-en-la-nube/true-native:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /native/ping
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /native/ping
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: true-native-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: true-native
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30006
