CloudNative/202614-grupo5-proyecto/k8s/aws/notifications_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-app-deployment
  namespace: default
  labels:
    app: notifications-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-app
  template:
    metadata:
      labels:
        app: notifications-app
    spec:
      containers:
        - name: notifications-app
          image: ${ECR_REGISTRY}/notifications_app:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 30008
          readinessProbe:
            httpGet:
              path: /ping
              port: 30008
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 30008
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: notifications-app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: notifications-app
  ports:
    - port: 80
      targetPort: 30008
