CloudNative/202614-grupo5-proyecto/k8s/aws/orchestrator_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-app-deployment
  namespace: default
  labels:
    app: orchestrator-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orchestrator-app
  template:
    metadata:
      labels:
        app: orchestrator-app
    spec:
      containers:
        - name: orchestrator-app
          image: ${ECR_REGISTRY}/orchestrator_app:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 30005
          readinessProbe:
            httpGet:
              path: /ping
              port: 30005
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 30005
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: orchestrator-app
  ports:
    - port: 80
      targetPort: 30005
