CloudNative/202614-grupo5-proyecto/k8s/aws/posts_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-app-deployment
  namespace: default
  labels:
    app: posts-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-app
  template:
    metadata:
      labels:
        app: posts-app
    spec:
      containers:
        - name: posts-app
          image: ${ECR_REGISTRY}/posts_app:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 30001
          readinessProbe:
            httpGet:
              path: /posts/ping
              port: 30001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /posts/ping
              port: 30001
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: posts-app-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: posts-app
  ports:
    - port: 80
      targetPort: 30001
      nodePort: 30001
