CloudNative/202614-grupo5-proyecto/k8s/aws/scores_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scores-app-deployment
  labels:
    app: scores-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scores-app
  template:
    metadata:
      labels:
        app: scores-app
    spec:
      containers:
        - name: scores-app
          image: ${ECR_REGISTRY}/scores_app:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 30004
          readinessProbe:
            httpGet:
              path: /scores/ping
              port: 30004
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /scores/ping
              port: 30004
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: scores-app-service
spec:
  type: ClusterIP
  selector:
    app: scores-app
  ports:
    - port: 80
      targetPort: 30004
