CloudNative/202614-grupo5-proyecto/k8s/aws/users_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app-deployment
  namespace: default
  labels:
    app: users-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
        - name: users-app
          image: ${ECR_REGISTRY}/users_app:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 30000
          readinessProbe:
            httpGet:
              path: /users/ping
              port: 30000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /users/ping
              port: 30000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: users-app-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: users-app
  ports:
    - port: 80
      targetPort: 30000
      nodePort: 30000
